Fix text overflow problems

--- a/src/components/PostViewCard/post-view-card.sass
+++ b/src/components/PostViewCard/post-view-card.sass
@@ -11,6 +11,9 @@
   &--avatar-container
     padding-right: map-get($spacers, 4)
 
+  &--content-container
+    word-break: break-word
+
   &--create-date
     display: block
     padding-bottom: map-get($spacers, 2)
